--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
           <div class="input-field">
             <i class="fa-solid fa-ruler"></i>
-            <input type="number"id="height" required>
+            <input type="number" step="0.01" id="height" required>
             <span>m</span>
           </div>
 
@@ -102,6 +102,7 @@
   <script src="./assets/js/bootstrap.bundle.min.js" ></script>
   <script src="./assets/js/popper.min.js"></script>
   <script src="./assets/js/bootstrap.min.js"></script>
+  <script src="./assets/js/script.js"></script>
 
 </body>
 </html>
