--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calculadora de IMC</title>
 
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/img/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./assets/css/style.css">
@@ -32,7 +36,7 @@
 
           <div class="input-field">
             <i class="fa-solid fa-weight-hanging"></i>
-            <input type="number"id="weight" required>
+            <input type="number"id="weight" maxlenght="4" required>
             <span>Kg</span>
           </div>
 
@@ -40,7 +44,7 @@
 
         </div>
 
-        <div class="input-box ">
+        <div class="input-box" >
 
           <label for="height">
             Altura em metros
@@ -48,7 +52,7 @@
 
           <div class="input-field">
             <i class="fa-solid fa-ruler"></i>
-            <input type="number" step="0.01" id="height" required>
+            <input type="number" step="0.01" id="height" maxlenght="4"required>
             <span>m</span>
           </div>
 
